# rocqsheet

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  dune-project  rocqsheet.opam
.github/workflows/: ci.yml
rocq-crane-imgui/: README.md  dune-project  imgui_helpers.h  rocq-crane-imgui.opam
rocq-crane-imgui/include/: imgui_helpers.h
rocq-crane-imgui/theories/: dune
src/: CMakeLists.txt  chart_helpers.cpp  chart_helpers.h  do_op_helpers.h  eval_iter.cpp  eval_iter.h  find_replace_helpers.h  formula.cpp  formula.h  formula_test.cpp  imgui_helpers.h  list_helpers.h  main.cpp  number_format_helpers.h  pdf_helpers.cpp  pdf_helpers.h  saturation.h  tab_bar_helpers.cpp
tests/: headless_smoke.sh  kernel_test.cpp  torture_test.cpp
tests/fixtures/: headless_smoke.txt
theories/: Charts.v  ColumnContracts.v  Comments.v  Concurrent.v  Conditional.v  Contracts.v  Csv.v  Date.v  DependencyDepth.v  DependentTypes.v  Determinism.v  Dirty.v  Edit.v  Effects.v  ErrorAnalysis.v  EvalIterSpec.v  Filter.v  Finance.v  FindReplace.v  Formatting.v  FullPersist.v  HashChain.v  ImGuiE.v  InsertDelete.v  InsertWithShift.v  InsertionSort.v  Macros.v  Menus.v  Merges.v  NamedRanges.v  NumberFormat.v  Parser.v  Pdf.v  Persistence.v  PersistentSheet.v  Playground.v  PropertyRegressions.v  Provenance.v  Range.v  Render.v  (+15 more)
