(lang dune 3.17)
(using coq 0.9)

(package
 (name rocq-crane-imgui)
 (synopsis "Crane Coq bindings for Dear ImGui (imguiE effect interface)")
 (description
  "Reusable imgui-side bindings for projects that drive a Dear ImGui front-end \
   from a Crane-extracted Coq itree.  Mirrors the layout of joom's \
   rocq-crane-sdl2 so it can be opam-pinned and consumed as a git submodule."))
